infrastructure/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: server
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`auth.d-f.dev`)"
      kind: Rule
      services:
        - name: authentik
          port: 9000
      middlewares:
        - name: crowdsec
          namespace: server
  tls:
    certResolver: letsencrypt
